added class service